@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: external.c,v 1.19 2003/05/21 20:21:31 thyssen Exp $
+ * $Id: external.c,v 1.20 2003/05/29 11:31:27 thyssen Exp $
  */
 
 #include "config.h"
@@ -287,20 +287,21 @@ extern void CommandExternal( char *sz ) {
 
     while( !ExternalRead( hPeer, szCommand, sizeof( szCommand ) ) )
 	if( ParseFIBSBoard( szCommand, anBoard, szName, szOpp, &nMatchTo,
-			     anScore + 1, anScore, anDice, &nCube,
+                            anScore, anScore + 1, anDice, &nCube,
 			    &fCubeOwner, &fDoubled, &fTurn, &fCrawford ) )
-	    outputl( _("Warning: badly formed board from external controller.") );
+          outputl( _("Warning: badly formed board from external controller.") );
 	else {
 
             if ( ! fTurn )
               SwapSides( anBoard );
 
 	    SetCubeInfo ( &ci, nCube, fCubeOwner, fTurn, nMatchTo, anScore,
-			  fCrawford, fJacoby, nBeavers, bgvDefault );
+			  fCrawford, fJacoby, nBeavers, bgvDefault ); 
 
 	    memcpy( anBoardOrig, anBoard, sizeof( anBoard ) );
 
-	    if( fDoubled ) {
+	    if ( fDoubled > 0 ) {
+
 		/* take decision */
 		if( GeneralCubeDecision( "", aarOutput, aarStdDev,
 					 aarsStatistics, anBoard, &ci,
@@ -324,6 +325,47 @@ extern void CommandExternal( char *sz ) {
 		default:
 		    strcpy( szResponse, "take" );
 		}
+
+	    } else if ( fDoubled < 0 ) {
+              
+                /* if opp wants to resign (extension to FIBS board) */
+
+		float arOutput[ NUM_ROLLOUT_OUTPUTS ];
+		float rEqBefore, rEqAfter;
+		const float epsilon = 1.0e-6;
+
+		if ( GeneralEvaluationE( arOutput, anBoard, &ci,
+		    &esEvalCube.ec ) )
+		    break;
+
+		rEqBefore = arOutput[ OUTPUT_CUBEFUL_EQUITY ];
+
+		/* I win 100% if opponent resigns */
+		arOutput[ 0 ] = 1.0; 
+		arOutput[ 1 ] = arOutput[ 2 ] =
+			arOutput[ 3 ] = arOutput[ 4 ] = 0.0;
+
+		/* resigned at least a gammon */
+		if( fDoubled <= -2 ) arOutput[ 1 ] = 1.0;
+
+		/* resigned a backgammon */
+		if( fDoubled == -3 ) arOutput[ 2 ] = 1.0;
+
+		InvertEvaluation ( arOutput );
+      		rEqAfter = Utility ( arOutput, &ci );
+		if ( nMatchTo ) rEqAfter = eq2mwc( rEqAfter, &ci );
+
+		/* comment this out when debugging is done 
+		printf ("# equity before resignation: %.10f\n"
+			"# equity after resignation : %.10f\n",
+			rEqBefore, rEqAfter );*/
+
+		/* if opponent gives up equity by resigning */
+		if( ( rEqBefore - rEqAfter ) >= epsilon )
+		    strcpy( szResponse, "accept" );
+		else
+		    strcpy( szResponse, "reject" );
+
 	    } else if( anDice[ 0 ] ) {
 		/* move */
 		if( FindBestMove( anMove, anDice[ 0 ], anDice[ 1 ],
